--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,9 +1,10 @@
 .header {
-  margin: 2vw 0;
+  margin: 2.5vw 0;
 }
 
 .headerWrapper {
   margin: auto;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
