--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+:root {
+  font-family: "Montserrat", sans-serif;
+  font-size: 13px;
+}
+
 body {
-  background-color: #3EA9F5;
+  background-color: #3ea9f5;
 }
