Refactor Auth form

--- a/src/components/forms/AuthFormContainer/AuthFormContainer.module.scss
+++ b/src/components/forms/AuthFormContainer/AuthFormContainer.module.scss
@@ -1,8 +1,8 @@
 @import "/src/common/styles/templates";
 @import "/src/common/styles/colors";
 
-.form {
-  margin: auto;
+.formContainer{
+  @extend %alignItems;
 }
 
 .header {
