--- a/src/components/forms/SignUpForm/SignUpForm.module.scss
+++ b/src/components/forms/SignUpForm/SignUpForm.module.scss
@@ -1,13 +1,22 @@
 @import "/src/common/styles/variables";
+@import "/src/common/styles/templates";
 
 .inputWrapper {
   display: flex;
   flex-direction: column;
-  
+
   @media screen and (min-width: 550px) {
     flex-direction: row;
     * + * {
       margin-left: $input-space * 2;
     }
   }
+}
+
+.header {
+  @include header(3rem);
+}
+
+.subHeader {
+  @extend %subHeader;
 }
