Update AuthForm container & add input errors

--- a/src/components/forms/InputContainer/InputContainer.module.scss
+++ b/src/components/forms/InputContainer/InputContainer.module.scss
@@ -37,3 +37,11 @@
     text-transform: uppercase;
   }
 }
+
+.inputError {
+  $outline: 1px solid $error-color;
+  outline: $outline;
+  &:focus {
+    outline: $outline;
+  }
+}
